src/antlr/zzzParser.java
// Generated from /Users/zhangjiaheng/IdeaProjects/compiler/src/zzz.g4 by ANTLR 4.5.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class zzzParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, WS=33, COMMENT=34, LineComment=35, IF=36, ELSE=37, RETURN=38, 
		BREAK=39, CONTINUE=40, WHILE=41, FOR=42, VIOD=43, CLASS=44, NEW=45, INT=46, 
		STRING=47, BOOL=48, NULL=49, BoolLiteral=50, IntLiteral=51, StringLiteral=52, 
		ID=53;
	public static final int
		RULE_stmt = 0, RULE_expr_stmt = 1, RULE_expr = 2, RULE_assignment_expr = 3, 
		RULE_logic_or_expr = 4, RULE_logic_and_expr = 5, RULE_inclusive_or_expr = 6, 
		RULE_exclusive_or_expr = 7, RULE_and_expr = 8, RULE_equality_expr = 9, 
		RULE_relational_expr = 10, RULE_shift_expr = 11, RULE_additive_expr = 12, 
		RULE_multiplication_expr = 13, RULE_creation_expr = 14, RULE_dim_expr = 15, 
		RULE_unary_expr = 16, RULE_postfix_expr = 17, RULE_param_list = 18, RULE_pre_expr = 19, 
		RULE_class_decl = 20, RULE_member_decl_list = 21, RULE_var_decl_stmt = 22, 
		RULE_func_decl = 23, RULE_param_decl_list = 24, RULE_block_stmt = 25, 
		RULE_stmt_list = 26, RULE_program = 27, RULE_type = 28, RULE_basictype = 29;
	public static final String[] ruleNames = {
		"stmt", "expr_stmt", "expr", "assignment_expr", "logic_or_expr", "logic_and_expr", 
		"inclusive_or_expr", "exclusive_or_expr", "and_expr", "equality_expr", 
		"relational_expr", "shift_expr", "additive_expr", "multiplication_expr", 
		"creation_expr", "dim_expr", "unary_expr", "postfix_expr", "param_list", 
		"pre_expr", "class_decl", "member_decl_list", "var_decl_stmt", "func_decl", 
		"param_decl_list", "block_stmt", "stmt_list", "program", "type", "basictype"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "';'", "'='", "'||'", "'&&'", "'|'", "'^'", "'&'", 
		"'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'+'", "'-'", 
		"'/'", "'*'", "'%'", "'['", "']'", "'++'", "'--'", "'!'", "'~'", "'.'", 
		"','", "'{'", "'}'", null, null, null, "'if'", "'else'", "'return'", "'break'", 
		"'continue'", "'while'", "'for'", "'void'", "'class'", "'new'", "'int'", 
		"'string'", "'bool'", "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "WS", "COMMENT", 
		"LineComment", "IF", "ELSE", "RETURN", "BREAK", "CONTINUE", "WHILE", "FOR", 
		"VIOD", "CLASS", "NEW", "INT", "STRING", "BOOL", "NULL", "BoolLiteral", 
		"IntLiteral", "StringLiteral", "ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "zzz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public zzzParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExpresionContext extends StmtContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public ExpresionContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Val_declContext extends StmtContext {
		public Var_decl_stmtContext var_decl_stmt() {
			return getRuleContext(Var_decl_stmtContext.class,0);
		}
		public Val_declContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterVal_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitVal_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitVal_decl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakContext extends StmtContext {
		public TerminalNode BREAK() { return getToken(zzzParser.BREAK, 0); }
		public BreakContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitBreak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitBreak(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ContinueContext extends StmtContext {
		public TerminalNode CONTINUE() { return getToken(zzzParser.CONTINUE, 0); }
		public ContinueContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterContinue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitContinue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitContinue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForContext extends StmtContext {
		public TerminalNode FOR() { return getToken(zzzParser.FOR, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ForContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockContext extends StmtContext {
		public Block_stmtContext block_stmt() {
			return getRuleContext(Block_stmtContext.class,0);
		}
		public BlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StmtContext {
		public TerminalNode WHILE() { return getToken(zzzParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public WhileContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class If_elseContext extends StmtContext {
		public TerminalNode IF() { return getToken(zzzParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(zzzParser.ELSE, 0); }
		public If_elseContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterIf_else(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitIf_else(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitIf_else(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends StmtContext {
		public TerminalNode IF() { return getToken(zzzParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public IfContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnContext extends StmtContext {
		public TerminalNode RETURN() { return getToken(zzzParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stmt);
		int _la;
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new BlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				block_stmt();
				}
				break;
			case 2:
				_localctx = new Val_declContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				var_decl_stmt();
				}
				break;
			case 3:
				_localctx = new ExpresionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				expr_stmt();
				}
				break;
			case 4:
				_localctx = new If_elseContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				match(IF);
				setState(64);
				match(T__0);
				setState(65);
				expr();
				setState(66);
				match(T__1);
				setState(67);
				stmt();
				setState(68);
				match(ELSE);
				setState(69);
				stmt();
				}
				break;
			case 5:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				match(IF);
				setState(72);
				match(T__0);
				setState(73);
				expr();
				setState(74);
				match(T__1);
				setState(75);
				stmt();
				}
				break;
			case 6:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				match(RETURN);
				setState(79);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NEW) | (1L << NULL) | (1L << BoolLiteral) | (1L << IntLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(78);
					expr();
					}
				}

				setState(81);
				match(T__2);
				}
				break;
			case 7:
				_localctx = new BreakContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(82);
				match(BREAK);
				setState(83);
				match(T__2);
				}
				break;
			case 8:
				_localctx = new ContinueContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				match(CONTINUE);
				setState(85);
				match(T__2);
				}
				break;
			case 9:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				match(WHILE);
				setState(87);
				match(T__0);
				setState(88);
				expr();
				setState(89);
				match(T__1);
				setState(90);
				stmt();
				}
				break;
			case 10:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(92);
				match(FOR);
				setState(93);
				match(T__0);
				setState(95);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NEW) | (1L << NULL) | (1L << BoolLiteral) | (1L << IntLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(94);
					expr();
					}
				}

				setState(97);
				match(T__2);
				setState(99);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NEW) | (1L << NULL) | (1L << BoolLiteral) | (1L << IntLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(98);
					expr();
					}
				}

				setState(101);
				match(T__2);
				setState(103);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NEW) | (1L << NULL) | (1L << BoolLiteral) | (1L << IntLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
					{
					setState(102);
					expr();
					}
				}

				setState(105);
				match(T__1);
				setState(106);
				stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_stmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterExpr_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitExpr_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitExpr_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_stmtContext expr_stmt() throws RecognitionException {
		Expr_stmtContext _localctx = new Expr_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__17) | (1L << T__18) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NEW) | (1L << NULL) | (1L << BoolLiteral) | (1L << IntLiteral) | (1L << StringLiteral) | (1L << ID))) != 0)) {
				{
				setState(109);
				expr();
				}
			}

			setState(112);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Assignment_exprContext assignment_expr() {
			return getRuleContext(Assignment_exprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			assignment_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_exprContext extends ParserRuleContext {
		public Logic_or_exprContext logic_or_expr() {
			return getRuleContext(Logic_or_exprContext.class,0);
		}
		public List<Assignment_exprContext> assignment_expr() {
			return getRuleContexts(Assignment_exprContext.class);
		}
		public Assignment_exprContext assignment_expr(int i) {
			return getRuleContext(Assignment_exprContext.class,i);
		}
		public Assignment_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterAssignment_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitAssignment_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitAssignment_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_exprContext assignment_expr() throws RecognitionException {
		return assignment_expr(0);
	}

	private Assignment_exprContext assignment_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Assignment_exprContext _localctx = new Assignment_exprContext(_ctx, _parentState);
		Assignment_exprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_assignment_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(117);
			logic_or_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Assignment_exprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_assignment_expr);
					setState(119);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(120);
					match(T__3);
					setState(121);
					assignment_expr(2);
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Logic_or_exprContext extends ParserRuleContext {
		public Logic_and_exprContext logic_and_expr() {
			return getRuleContext(Logic_and_exprContext.class,0);
		}
		public List<Logic_or_exprContext> logic_or_expr() {
			return getRuleContexts(Logic_or_exprContext.class);
		}
		public Logic_or_exprContext logic_or_expr(int i) {
			return getRuleContext(Logic_or_exprContext.class,i);
		}
		public Logic_or_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic_or_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).enterLogic_or_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof zzzListener ) ((zzzListener)listener).exitLogic_or_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof zzzVisitor ) return ((zzzVisitor<? extends T>)visitor).visitLogic_or_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logic_or_exprContext logic_or_expr() throws RecognitionException {
		return logic_or_expr(0);
	}

	private Logic_or_exprContext logic_or_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Logic_or_exprContext _localctx = new Logic_or_exprContext(_ctx, _parentState);
		Logic_or_exprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_logic_or_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(128);
			logic_and_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Logic_or_exprContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_logic_or_expr);
					setState(130);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(131);
					match(T__4);
					setState(132);
					logic_or_expr(3);
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
